<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_to_manage_bonus_bill"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:hintTextColor="@color/stroke_gray"
        app:prefixText="+7"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/phoneInputTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueLoginButton"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_card_background_red"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>