<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_m_club"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        style="@style/DefaultRecyclerView"
        android:id="@+id/bonusProgramInfoRecyclerView"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="8dp"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:orientation="vertical"
        tools:listitem="@layout/item_bonus_program"
        tools:itemCount="3"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bonusProgramInfoRecyclerView"
        android:layout_marginTop="24dp"
        android:text="@string/conditions_of_program"
        android:textColor="@color/blue_hyperlink"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_background_cart"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>